TestCases/LLVMTests/SyntaxErrorTests/tests/test5.c






typedef

float 0.3;



int main(){
    return 0;
};
